SMX4NMR-227: ChannelImpl#testChangeThreadNameForSyncExchange fails on some CI build boxes
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx4/nmr/trunk@1003244 13f79535-47bb-0310-9956-ffa450edef68