@@ -117,6 +117,15 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -Djava.security.manager -Djava.security.policy=${project.build.testOutputDirectory}/java.policy
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
